# filamentseek-web

./: .gitignore  Cargo.toml  Rocket.toml  build.rs  index.html  style.css
src/: admin.rs  home.rs  login.rs  logout.rs  main.rs  product.rs  product_search.rs  register.rs  request.rs  session.rs
