[package]
name = "filamentseek-web"
version = "0.1.0"
authors = ["Jason <jason@elg.gg>"]
edition = "2024"
repository = "https://github.com/FilamentSeek/filamentseek-web"

[build-dependencies]
dotenvy = "0.15.7"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.6", features = ["csr"] }
leptos_router = "0.8.5"
serde = "1.0.219"
serde_json = "1.0.142"
gloo-net = { version = "0.6.0", features = ["json"] }
web-sys = { version = "0.3.77", features = ["Window", "Storage"] }
gloo-storage = "0.3.0"
strum = "0.27.2"
strum_macros = "0.27.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt", "time"] }
getrandom = { version = "0.2.16", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
tokio = { version = "1.47.1", features = ["macros"] }
