[package]
name = "filamentseek-web"
version = "0.1.0"
authors = ["Jason <jason@elg.gg>"]
edition = "2024"
repository = "https://github.com/FilamentSeek/filamentseek-web"

[build-dependencies]
dotenvy = "0.15.7"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.8", features = ["csr"] }
leptos_router = "0.8.6"
serde = "1.0.221"
serde_json = "1.0.144"
gloo-net = { version = "0.6.0", features = ["json"] }
web-sys = { version = "0.3.78", features = ["Window", "Storage"] }
gloo-storage = "0.3.0"
strum = "0.27.2"
strum_macros = "0.27.2"
